--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -12,8 +12,21 @@ body {
   width: 200px;
   height: 200px;
   background: hotpink;
+  transition: all 0.4s ease-in-out;
 }
 
 .blue {
   background: skyblue;
+}
+
+.rotate {
+  transform: rotate(45deg);
+}
+
+.background {
+  background-color: green;
+}
+
+.radius {
+  border-radius: 50%;
 }
